# linux_app_C

./: CMakeCache.txt  CMakeLists.txt  Makefile  _log.txt  cmake_install.cmake  install_manifest.txt  main.cc
_zlog/: .zlog.conf.swp  zlog.conf
_zlog/lib/: libzlog.so.1.2
lib4so/: CMakeLists.txt  Makefile  cmake_install.cmake  say_hello.c  say_hello.h
